# HIP_Course

./: .gitignore  LICENSE  README.md
course_material/: CMakeLists.txt  env  env-rocm-6.3.0  env-rocm-6.4.1  env.mak  env_cpu  env_laptop  env_nvidia  env_pelagos  env_setonix  install.sh
course_material/.ipynb_checkpoints/: env-checkpoint  mat_mult-checkpoint.cpp  mat_mult_transpose-checkpoint.cpp
course_material/HIP_Challenge/: Challenge.html  xcorr_answers.cpp
course_material/HIP_Correlation_Challenge/: Challenge.html  Challenge.ipynb  Makefile  task1_answer.hpp  task2_answer.hpp  task3_answer.hpp  task4_answer.hpp  task5_answer.hpp  xcorr.cpp  xcorr_answers.cpp  xcorr_testbench.cpp  xcorr_testbench_answers.cpp
course_material/HIP_Elementwise_Challenge/: Exercise.html  Exercise.ipynb  Makefile  mat_elementwise_answer.cpp  step1_kernel.cpp  step2_resources.cpp  step3_device_allocation.cpp  step4_memcpy_todevice.cpp  step5_kernel_launch.cpp  step6_memcpy_fromdevice.cpp  step7_free_devicemem.cpp
course_material/L0_Survival_C++/: Makefile  Survival_C++.html  Survival_C++.ipynb  a.out  exercise.cpp  image_creator.cpp  image_creator_answer.cpp  image_creator_answers.cpp  mat_helper.hpp  mat_mult.cpp  mat_mult_answer.cpp  mat_size.hpp
course_material/L10_IO_Optimisation/: mat_size.hpp
course_material/L1_Introduction/: CMakeLists.txt  Intro.html  Intro.ipynb  Makefile  hello_devices.cpp
course_material/L2_Survival_C++/: image_creator_answers.cpp
course_material/L2_Using_HIP_On_Setonix/: CMakeLists.txt  Makefile  Setonix.html  Setonix.ipynb  a.out  hello_devices.cpp  hello_devices_mpi.cpp  hello_devices_mpi_onefile.cpp  hello_jobstep.cpp  jobscript.sh  kernels.hip.cpp  run_compile.sh  slurm-322955.out  slurm-322956.out  slurm-322957.out  slurm-322958.out  slurm-322959.out  test.cpp
course_material/L3_Matrix_Multiplication/: CMakeLists.txt  Exercise.ipynb  Makefile  Mat_example.html  Mat_example.ipynb  mat_elementwise.cpp  mat_elementwise_answer.cpp  mat_mult.cpp  mat_serial.cpp  mat_size.hpp
course_material/L4_Debugging/: CMakeLists.txt  Debugging.html  Debugging.ipynb  Exercise.html  Exercise.ipynb  Makefile  kernels_mat_mult.c  mat_elementwise.cpp  mat_elementwise_answer.cpp  mat_mult.cpp  mat_mult_badmem.sim  mat_mult_bug.cpp  mat_mult_memcheck.cpp  mat_mult_printf.cpp  mat_size.hpp
course_material/L4_Using_HIP_On_Setonix/: Setonix.ipynb
course_material/L5_Debugging/: Debugging.ipynb  mat_mult.cpp  mat_mult_memcheck.cpp
course_material/L5_Profiling/: .gitignore  CMakeLists.txt  Exercise.html  Exercise.ipynb  L5_Profiling.cltracer  Makefile  Profiling.html  Profiling.ipynb  analysis.txt  jobscript.sh  kernels_mat_mult.c  mat_elementwise_answer.cpp  mat_mult_profiling.cpp  mat_size.hpp  omnitrace.cfg  profile.0.0.0  profile.0.0.1  profile.0.0.2  rocprof_counters.csv  rocprof_counters.txt  setonix_counters.txt  workloads.tgz
course_material/L6.0_Memory_Management/: Exercise.html  Memory.html  atomics.cpp  kernels_atomics.c
course_material/L6.1_Shared_Virtual_Memory/: Exercise.html  SVM.html  svm_check.cpp
course_material/L6_Memory_Management/: CMakeLists.txt  Exercise.html  Exercise.ipynb  Makefile  Memory.html  Memory.ipynb  atomics.cpp  atomics2.cpp  kernels_elementwise.c  kernels_mat_mult.c  mat_elementwise.cpp  mat_elementwise_answer.cpp  mat_mult_local.cpp  mat_mult_local_vector.cpp  mat_mult_managed_mem.cpp  mat_mult_pinned_mem.cpp  mat_mult_pitched.cpp  mat_mult_pitched_mem.cpp  mat_mult_shared.cpp  mat_mult_shared_A.cpp  mat_mult_shared_A_faulty.cpp  mat_mult_shared_A_vector.cpp  mat_mult_shared_faulty.cpp  mat_mult_shared_vector.cpp  mat_size.hpp  vector_types.cpp
course_material/L6_Profiling/: mat_elementwise.cpp
course_material/L7_Kernel_Optimisation/: CMakeLists.txt  Debug.html  Debug.ipynb  Makefile  Makefile_win.mak  Optimisation.ipynb  Visualise_mem.ipynb  benchmark.json  benchmark.py  benchmark_4096.json  benchmark_new.py  mat_mult_AT.cpp  mat_mult_BT.cpp  mat_mult_clblast_opencl.cpp  mat_mult_double.cpp  mat_mult_float.cpp  mat_mult_float_hipblas.cpp  mat_mult_float_hipblas_md.cpp  mat_mult_float_md_hipblas.cpp  mat_mult_float_restrict.cpp  mat_mult_naive.cpp  mat_mult_shared_A.cpp  mat_mult_shared_A_col.cpp  mat_mult_shared_A_flat_alt.cpp  mat_mult_shared_A_flat_col.cpp  mat_mult_shared_B.cpp  mat_mult_tile_local.cpp  mat_mult_tile_local_AB.cpp  mat_mult_tile_shared_A.cpp  mat_mult_tile_shared_AB.cpp  mat_mult_tile_shared_AB_flat_col.cpp  mat_mult_tile_shared_AB_vector.cpp  mat_mult_tile_shared_AB_vector_new.cpp  mat_mult_tile_shared_A_vector.cpp  mat_mult_tile_shared_B.cpp  mat_mult_tile_shared_B_vector.cpp  mat_mult_transpose_A.cpp  mat_mult_transpose_A_opencl.cpp  mat_mult_transpose_B.cpp  mat_size.hpp  (+1 more)
course_material/L7_Memory_Management/: Memory.html  mat_elementwise_answer.cpp
course_material/L7_Shared_Virtual_Memory/: Exercise.html  Makefile  SVM.html  kernels_atomics.c  kernels_mat_mult.c  mat_mult_coarse_buffer_svm.cpp  mat_mult_fine_system_svm.cpp
course_material/L8_IO_Optimisation/: .gitignore  CMakeLists.txt  Concurrent_IO.html  Concurrent_IO.ipynb  Exercise.html  Exercise.ipynb  Makefile  bug_report.cpp  layer_cake.cpp  layer_cake_answers.cpp  make_traces.sh  mat_size.hpp  wave2d_async.cpp  wave2d_async_events.cpp  wave2d_async_opencl.cpp  wave2d_async_streams.cpp  wave2d_sync.cpp
course_material/L8_Kernel_Optimisation/: Makefile  Optimisation.ipynb  mat_mult_clblast_md.cpp  mat_mult_float.cpp  mat_mult_local.cpp
course_material/L9_IO_Optimisation/: Concurrent_IO.html  Makefile  wave2d_async.cpp
course_material/L9_Porting_CUDA_to_HIP/: .gitignore  Makefile  Porting.html  Porting.ipynb
course_material/OpenCL_Challenge/: mat_size.hpp  task1_answer.hpp  task3_answer.hpp  task5_answer.hpp  xcorr.cpp
course_material/Reference_notes/: HIP_API.html  HIP_API.ipynb  HIP_datatypes.html  HIP_datatypes.ipynb  Helper_function_table.html  Helper_function_table.ipynb  Makefile  OpenCL_datatypes.html  OpenCL_datatypes.ipynb  OpenCL_function_tables.html  OpenCL_function_tables.ipynb  hip_types.cpp
deployment/: make_users.sh  (+5 more)
(+687 files in other folders)
